feat: Refactor PostService and RecommendationService to use getter methods for entity fields
- Updated PostService to replace direct field access with getter methods for Post and Community entities.
- Modified RecommendationService to use getter methods for Community and User entities.
- Enhanced SearchService to utilize getter methods for Post, Comment, and User entities.
- Adjusted VoteService to implement getter methods for Vote and User entities.
- Updated UuidV7Generator to remove unnecessary IdentifierGenerator implementation.
- Changed application.yml to switch active profile from dev to prod and updated datasource configurations.
- Renamed upvote/downvote columns to like/dislike in database migrations and updated related SQL scripts.
- Added new categories with images in V7 migration and adjusted community-category relationships.
- Created comprehensive DATABASE_FLYWAY.md documentation for Flyway commands and troubleshooting.
- Implemented CORS configuration to enhance security and flexibility in API access.
- Introduced UserPrincipal class for custom user details implementation in security context.
- Added completion_date column to event_publication table and fixed schema to match Spring Modulith expectations.
- Made community_id and title columns in posts table nullable to allow more flexible post creation.